2006-04-03  Julien Puydt  <jpuydt@free.fr>

	* TODO: Removed the link to wiki.seconix.com. Fixes #336962.

2006-04-02  Damien Sandras  <dsandras@gnome.org>
	
	* lib/gui/gmcontacts/gmcontacts-ldap.cpp:
	Fixed LDAP search filter so that it works with LDAP servers that 
	do not have a "location" attribute. (#336849, Damien Sandras)

2006-04-02  Jan Schampera <jan.schampera@unix.net>

	* lib/gui/gmtextviewaddon.c: fixed a bug in wrapper code for
	GtkTextView that made it non-selectable text (occured in
	chat window) (fixes #336789)

2006-04-01  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: fixed sensitivity setting of "Fullscreen" Menuitem
	and sensitifity when leaving fullscreen mode (fixes REOP #336575 and
	an issue seen by a code review)

2006-04-01  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: fixed framesize calculation of video
	frame (fixes #336572)

2006-03-30  Jan Schampera <jan.schampera@unix.net>

	* src/gui/addressbook.cpp: added "New contact" to the contacts
	context menu (fixes #336588)

2006-03-30  Jan Schampera <jan.schampera@unix.net>

	* src/gui/main.cpp: Made sensitivity of the zoom related menuitems
	dependant on the actual zoom factor (fixes #336575)

2006-03-29  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts.h, lib/gmcontacts/gmcontacts-eds.cpp,
	lib/gmcontacts/gmcontacts-gmconf.cpp: Added the gmcontact_copy
	function call. Fixes #336464.
	* lib/gmcontacts/gmcontacts-eds.cpp: Made use of it to simplify code.

2006-03-29  Julien Puydt  <jpuydt@free.fr>

	* lib/gmcontacts/gmcontacts.h: Made a contact state an enum instead of
	magic values. Fixes #336445.
	* lib/gmcontacts/gmcontacts-avahi.cpp,
	lib/gmcontacts/gmcontacts-eds.cpp,
	lib/gmcontacts/gmcontacts-gmconf.cpp,
	lib/gmcontacts/gmcontacts-ldap.cpp, src/gui/addressbook.cpp: Made use
	of the previous.

2006-03-27  Damien Sandras  <dsandras@gnome.org>

	* lib/gmcontacts/gmcontacts-ldap.cpp: Fixed ILS server browsing.
