@@ -121,7 +121,7 @@ gm_history_window_new ()
   GtkTextIter end;
 
   window = gtk_dialog_new ();
-  gtk_dialog_add_button (GTK_DIALOG (window), GTK_STOCK_CLOSE, 0);
+  gtk_dialog_add_button (GTK_DIALOG (window), GTK_STOCK_CLOSE, GTK_RESPONSE_CANCEL);
   g_object_set_data_full (G_OBJECT (window), "window_name",
 			  g_strdup ("log_window"), g_free);
   
