@@ -38,6 +38,7 @@ factor (fixes #336575) (Jan Schampera)
 leaving fullscreen mode (#336575, Jan Schampera)
 - Fixed a bug in wrapper code for GtkTextView that made it non-selectable text (occured in chat window). (#336789, Jan Schampera)
 - Fixed LDAP search filter so that it works with LDAP servers that do not have a "location" attribute. (#336849, Damien Sandras)
+- made most dialogs/popups closable by ESC (partially fixes #337494) (Jan Schampera)
 
 
 Fixes in OPAL/PWLIB/Ekiga since 2.00 Beta2:
