@@ -1,3 +1,10 @@
+2006-04-09  Jan Schampera <jan.schampera@unix.net>
+
+	* NEWS, src/gui/accounts.cpp, lib/gui/gmpreferences.c,
+	src/gui/addressbook.cpp, src/gui/history.cpp,
+	src/gui/callshistory.cpp, src/gui/tools.cpp: made most
+	dialogs/popups closable by ESC (partially fixes #337494)
+
 2006-04-03  Julien Puydt  <jpuydt@free.fr>
 
 	* TODO: Removed the link to wiki.seconix.com. Fixes #336962.
